# CourseGen

./: pyproject.toml
src/: api.py  gencourse.py  models.py  parse.py  questions.py
